--- a/Objetivos-2024-main/objetivos 2024/style.css
+++ b/Objetivos-2024-main/objetivos 2024/style.css
@@ -4,8 +4,8 @@
     --cor-de-fundo: #f5aac7;
     --texto1: #ff0077;
     --texto2: #FFFFFF;
-    --botao-ativo: #ffb7d3;
-    --botao-inativo: rgba(116, 196, 207, 0.692);
+    --botao-ativo: #3A375E;
+    --botao-inativo: rgba(58,55,94,0.5);
     --texto-fundo: rgba(58,55,94,0.3);
 }
 
@@ -13,31 +13,4 @@ body{
     background-color: var(--cor-de-fundo);
     color: var(--texto1);
     font-family:"Protest Riot", sans-serif;
-}
-
-.conteudo-principal{
-    display:flex;
-    flex-direction:column;
-    justify-content: center;
-    align-items: center;
-    max-width: 100%;
-    margin: 0 auto;
-}
-
-.tituloprincipal{
-    text-align: center;
-    width: 100%;
-    font-size: 100px;
-}
-
-.botao{
-    font-family:"Roboto",sans-serif ;
-    background-color: var(--botao-inativo);
-    display: flex;
-    color: var(--texto1);
-    justify-content: center;
-    padding: 1 em;
-    font-size: 90px;
-    align-items: center;
-    width: 100%;
 }
