--- a/objetivos 2024/style.css
+++ b/objetivos 2024/style.css
@@ -4,13 +4,68 @@
     --cor-de-fundo: #f5aac7;
     --texto1: #ff0077;
     --texto2: #FFFFFF;
-    --botao-ativo: #3A375E;
-    --botao-inativo: rgba(58,55,94,0.5);
-    --texto-fundo: rgba(58,55,94,0.3);
+    --botao-ativo: #ffd9e7;
+    --botao-inativo: rgba(116, 196, 207, 0.692);
+    --texto-fundo: rgba(81, 237, 248, 0.349);
 }
 
 body{
     background-color: var(--cor-de-fundo);
     color: var(--texto1);
     font-family:"Protest Riot", sans-serif;
+}
+
+.conteudo-principal{
+    display:flex;
+    flex-direction:column;
+    justify-content: center;
+    align-items: center;
+    max-width: 100%;
+    margin: 0 auto;
+}
+
+.tituloprincipal{
+    text-align: center;
+    width: 100%;
+    font-size: 100px;
+}
+
+.botao{
+    font-family:"Roboto",sans-serif ;
+    background-color: var(--botao-inativo);
+    display: flex;
+    color: var(--texto1);
+    justify-content: center;
+    padding: 1 em;
+    font-size: 70px;
+    align-items: center;
+    width: 100%;
+}
+
+.botoes{
+    display:flex
+}
+
+.botao:first-child{
+    border-radius: 0 80px 0 0;
+}
+
+.botao:last-child{
+    border-radius: 80px 0 0 80px;
+}
+
+.botao{
+    border-radius: 80px 80px 80px 80px;
+}
+
+.ativo{
+    background: var(--botao-ativo);
+    border-bottom: 4px solid rgb(40, 160, 216);
+    color:rgba(12, 139, 156, 0.692);
+}
+
+.aba-textos{
+    background-color: var(--texto-fundo);
+    padding:50px;
+    border-radius:0 0 40px 40px;
 }
