--- a/objetivos 2024/style.css
+++ b/objetivos 2024/style.css
@@ -47,7 +47,7 @@ body{
 }
 
 .botao:first-child{
-    border-radius: 0 80px 0 0;
+    border-radius: 0 80px 80px 0;
 }
 
 .botao:last-child{
@@ -58,7 +58,7 @@ body{
     border-radius: 80px 80px 80px 80px;
 }
 
-.ativo{
+.botao.ativo{
     background: var(--botao-ativo);
     border-bottom: 4px solid rgb(40, 160, 216);
     color:rgba(12, 139, 156, 0.692);
@@ -68,4 +68,23 @@ body{
     background-color: var(--texto-fundo);
     padding:50px;
     border-radius:0 0 40px 40px;
+}
+
+.aba-conteudo.ativo{
+    display:block;
+}
+
+.aba-conteudo{
+    display:none;
+}
+
+.aba-conteudo-titulo-principal{
+    font-size:50px;
+    text-align:center;
+}
+
+.aba-conteudo-titulo-secundario{
+    color:black;
+    text-transform:uppercase;
+    text-align: center;
 }
